current song title no longer cuts off if too long

--- a/app/scss/Playlists.scss
+++ b/app/scss/Playlists.scss
@@ -238,7 +238,6 @@
 .current-selected-media, .current-playing-media {
   display: inline-block;
   float:left;
-  width: 100%;
 }
 
 .current-selected-media:hover, .current-playing-media:hover {
